# Solution-Junky

./: .gitignore  PHASE_2A_VOICE_IMPLEMENTATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.cargo/: config.toml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: strip_whisper_bindgen_layouts.py
src-tauri/src/: categorization.rs  commands.rs  db.rs  embeddings.rs  error.rs  export.rs  image.rs  ingest.rs  lib.rs  main.rs  memory.rs  ocr.rs  pdf.rs  retrieval.rs  search.rs  websearch.rs
src-tauri/src/ai/: audit.rs  client.rs  mod.rs  router.rs  tasks.rs  types.rs
src-tauri/src/voice/: config.rs  error.rs  model.rs  payload.rs  send_capture.rs  state.rs  transcribe.rs
src-tauri/src/voice/audio/: capture.rs  mod.rs  ring_buffer.rs
src/components/: CategorySuggestionToast.tsx  ChatPane.tsx  CitationBadge.tsx  DropZone.tsx  GraphView.tsx  IngestToast.tsx  MemoryManager.tsx  MessageContent.tsx  ModelSelector.tsx  RightRail.tsx  SearchPalette.tsx  SettingsPanel.tsx  Sidebar.tsx
src/components/ui/: tooltip.tsx
src/components/voice/: RecordButton.tsx  TranscriptDisplay.tsx  VoiceControl.tsx  index.ts
src/hooks/: useVoice.ts  useVoiceRecorder.ts
src/lib/: categoryColors.ts  db.ts  export.ts  rag.ts  settings.ts  voice.ts
src/store/: index.ts  voice.ts
