[package]
name = "solution-junky"
version = "0.1.0"
description = "Solution Junky — Local-First AI Research Assistant"
authors = []
edition = "2021"

[lib]
name = "solution_junky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "solution-junky"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = { version = "2" }
tauri-plugin-fs = { version = "2" }
tauri-plugin-dialog = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
lopdf = "0.34"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
urlencoding = "2"
# Audio capture and local Whisper speech recognition are optional.
cpal = { version = "0.15", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
parking_lot = "0.12"
chrono = "0.4"
whisper-rs = { version = "0.16.0", optional = true }
async-trait = "0.1"

[features]
default = []
voice = ["cpal", "crossbeam-channel", "whisper-rs"]

[profile.dev]
opt-level = 1
lto = "thin"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = 2
strip = true
